# e-goi-wrappers

./: .gitignore  README  README.md  build.xml  common.xml  deploy-release
e-goi-wrapper-asp/: README.txt  build.xml  egoi.asp  example.asp  test.html  xmlrpc.asp
e-goi-wrapper-cpp/: CMakeLists.txt  build.xml
e-goi-wrapper-cpp/src/: CMakeLists.txt  egoi.cpp  egoi.h  egoimap.cpp  egoimap.h  egoixmlrpc.cpp  egoixmlrpc.h
e-goi-wrapper-cpp/test/: CMakeLists.txt  main.cpp
e-goi-wrapper-csharp/: .gitignore  EgoiApi.sln  build.xml
e-goi-wrapper-csharp/EgoiApi/: EgoiApi.cs  EgoiApi.csproj  EgoiApiFactory.cs  EgoiMap.cs
e-goi-wrapper-csharp/EgoiApi/Exceptions/: EgoiException.cs
e-goi-wrapper-csharp/EgoiApi/Impl/Rest/: EgoiApiRestImpl.cs
e-goi-wrapper-csharp/EgoiApi/Impl/XmlRpc/: EgoiApiProxy.cs  EgoiApiXmlRpcImpl.cs
e-goi-wrapper-csharp/EgoiApiProject/: EgoiApi.sln  EgoiApi.userprefs
e-goi-wrapper-csharp/EgoiApiProject/EgoiApi/: EgoiApi.cs  EgoiApi.csproj  EgoiApiFactory.cs  EgoiList.cs  EgoiMap.cs  EgoiMapList.cs  EgoiResellers.cs  EgoiResellersFactory.cs  EgoiSlingshot.cs  EgoiSlingshotFactory.cs  EgoiType.cs  Protocol.cs  Test.cs
e-goi-wrapper-csharp/EgoiApiProject/EgoiApi/Impl/Rest/: EgoiApiRestImpl.cs  EgoiResellersRestImpl.cs  EgoiSlingshotRestImpl.cs
e-goi-wrapper-csharp/EgoiApiProject/EgoiApi/Impl/XmlRpc/: EgoiApiProxy.cs  EgoiApiXmlRpcImpl.cs
e-goi-wrapper-csharp/EgoiApiProject/EgoiApi/Properties/: AssemblyInfo.cs
e-goi-wrapper-csharp/SampleProject/: EgoiApiSample.sln  EgoiApiSample.userprefs
e-goi-wrapper-csharp/SampleProject/EgoiApiSample/: EgoiApiSample.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
e-goi-wrapper-csharp/SampleProject/EgoiApiSample/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
e-goi-wrapper-csharp/Test/: Example.cs  Example.csproj  Program.cs  Test.csproj
e-goi-wrapper-csharp/Test/Properties/: AssemblyInfo.cs
e-goi-wrapper-java/: .classpath  .project  build.xml  ivy.xml  ivysettings.xml  nbbuild.xml
e-goi-wrapper-java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
e-goi-wrapper-java/nbproject/private/: private.properties  private.xml
e-goi-wrapper-java/src/: logback.xml
e-goi-wrapper-java/src-axis/com/egoi/api/soap/: Egoi_ApiBindingStub.java  Egoi_ApiPort.java  Egoi_ApiService.java  Egoi_ApiServiceLocator.java  Egoi_Api_SoapBindingStub.java  Egoi_Api_SoapPort.java  Egoi_Api_SoapServiceLocator.java
e-goi-wrapper-java/src-axis/com/egoi/api/soap/any/: Egoi_Api_SoapBindingStub.java  Egoi_Api_SoapPort.java  Egoi_Api_SoapService.java  Egoi_Api_SoapServiceLocator.java
e-goi-wrapper-java/src-axis/com/egoi/api/wrapper/impl/: as.java
e-goi-wrapper-java/src/com/egoi/api/soap/: Egoi_Api_SoapService.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/: Main.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/api/: EgoiApi.java  EgoiMap.java  EgoiMapList.java  EgoiType.java  IResult.java  IValue.java  MapResult.java  MapResultList.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/api/exceptions/: EgoiException.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/domain/: EgoiDataHelper.java  EgoiUserData.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/domain/exceptions/: EgoiException.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/examples/: Main.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/impl/: AbstractEgoiApi.java  EgoiApiFactory.java  EgoiApiSoap.java  EgoiApiXmlRpc.java  EgoiErrorEncoder.java  NullWorkaroundTypeFactory.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/impl/rest/: AbstractRestEgoiApi.java  EgoiApiRestImpl.java
e-goi-wrapper-java/src/com/egoi/api/wrapper/impl/soap/: EgoiApiSoap.java
e-goi-wrapper-perl/: .includepath  .project  README-local-repo.txt  README.CPAN.txt  README.txt  build.xml  example.pl  test.pl
e-goi-wrapper-perl/Egoi/: Api.pm
e-goi-wrapper-perl/Egoi/Api/: Soap.pm  XmlRpc.pm
e-goi-wrapper-perl/release/: e-goi-wrapper-perl-0.2.tar.bz
e-goi-wrapper-php/: .buildpath  .project  build.xml  example.php  examples.php  test.php
e-goi-wrapper-php/Egoi/: Api.php  Factory.php  RestImpl.php  SoapImpl.php  XmlRpcImpl.php
e-goi-wrapper-php/launchers/: e-goi-wrapper-php.launch
e-goi-wrapper-php/release/: e-goi-wrapper-php-0.2.tar.bz
e-goi-wrapper-php/tests/: soap.php  test.php  xmlrpc.php
e-goi-wrapper-python/: .project  .pydevproject  DEPENDENCIES  build.xml  example.py
e-goi-wrapper-python/EgoiApi/: EgoiApiFactory.py  RestImpl.py  XmlRpcImpl.py  __init__.py
e-goi-wrapper-python/release/: e-goi-wrapper-perl-0.2.tar.bz  e-goi-wrapper-python-0.2.tar.bz
e-goi-wrapper-qt/: CMakeLists.txt
e-goi-wrapper-qt/src/: CMakeLists.txt  egoi.cpp  requesthandler.cpp  requesthandler.h
e-goi-wrapper-qt/test/: CMakeLists.txt  main.cpp
e-goi-wrapper-qt/xmlrpc/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h  xmlrpc.pro
libs/cpp/xmlrpc-c/.svn/: wc.db
(+3 files in other folders)
