SET(sources
	egoi.cpp
)

ADD_LIBRARY(egoi SHARED  ${sources} ${moc_sources} )

IF(CMAKE_COMPILER_IS_GNUCXX AND HAVE_VISIBILITY)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility-inlines-hidden -fvisibility=hidden")
ENDIF(CMAKE_COMPILER_IS_GNUCXX AND HAVE_VISIBILITY)

# ADD_DEFINITIONS(-DQT3_SUPPORT ${QT_DEFINITIONS})
# INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
# TARGET_LINK_LIBRARIES(egoi ${QT_SUPPORT_LIBRARY} ${QT_CORE_LIBRARY} ${QT_GUI_LIBRARY} ${QT_SQL_LIBRARY} ${QT_XML_LIBRARY})

INSTALL_TARGETS(/lib egoi)
INSTALL_FILES(/include/egoi .*\\.h$)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
